--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "csv-parse": "^2.5.0",
     "dotenv": "^4.0.0",
     "moment": "^2.17.1",
     "ms": "^2.1.1",
