--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/Ournet/weather-notifier#readme",
   "devDependencies": {
+    "@types/moment-timezone": "^0.5.6",
     "@types/ms": "^0.7.30",
     "@types/node": "latest",
     "@types/request": "^2.47.1",
@@ -45,11 +46,12 @@
   "dependencies": {
     "csv-parse": "^2.5.0",
     "dotenv": "^4.0.0",
-    "moment": "^2.17.1",
+    "metno-symbols": "^0.1.1",
+    "moment-timezone": "^0.5.21",
     "ms": "^2.1.1",
     "ournet.links": "^0.4.3",
     "ournet.logger": "^0.1.0",
-    "ournet.web.data": "^0.1.4",
+    "ournet.web.data": "^0.1.7",
     "request": "^2.87.0"
   }
 }
