--- a/package.json
+++ b/package.json
@@ -35,23 +35,23 @@
   },
   "homepage": "https://github.com/Ournet/weather-notifier#readme",
   "devDependencies": {
-    "@types/moment-timezone": "^0.5.6",
+    "@types/moment-timezone": "^0.5.9",
     "@types/ms": "^0.7.30",
-    "@types/node": "latest",
-    "@types/request": "^2.47.1",
-    "ava": "^0.23.0",
+    "@types/node": "10.12.2",
+    "@types/request": "^2.48.0",
+    "ava": "^0.25.0",
     "rimraf": "^2.6.2",
-    "typescript": "latest"
+    "typescript": "3.1.6"
   },
   "dependencies": {
-    "csv-parse": "^2.5.0",
-    "dotenv": "^4.0.0",
+    "@ournet/api-client": "^0.1.0",
+    "csv-parse": "^3.1.3",
+    "dotenv": "^6.1.0",
     "metno-symbols": "^0.1.1",
-    "moment-timezone": "^0.5.21",
+    "moment-timezone": "^0.5.23",
     "ms": "^2.1.1",
-    "ournet.links": "^0.4.4",
+    "ournet.links": "^0.4.6",
     "ournet.logger": "^0.1.0",
-    "ournet.web.data": "^0.1.7",
-    "request": "^2.87.0"
+    "request": "^2.88.0"
   }
 }
