--- a/package.json
+++ b/package.json
@@ -37,15 +37,16 @@
   "devDependencies": {
     "@types/moment-timezone": "^0.5.9",
     "@types/ms": "^0.7.30",
-    "@types/node": "10.12.2",
-    "@types/request": "^2.48.0",
+    "@types/node": "10.12.7",
+    "@types/request": "^2.48.1",
     "ava": "^0.25.0",
     "rimraf": "^2.6.2",
     "typescript": "3.1.6"
   },
   "dependencies": {
-    "@ournet/api-client": "^0.1.0",
-    "csv-parse": "^3.1.3",
+    "@ournet/api-client": "^0.1.1",
+    "@ournet/places-domain": "^0.2.0",
+    "csv-parse": "^3.2.0",
     "dotenv": "^6.1.0",
     "metno-symbols": "^0.1.1",
     "moment-timezone": "^0.5.23",
