--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "pretest": "npm run clean && npm run tsc",
     "test": "ava --no-cache --verbose lib/**/*.test.js",
     "posttest": "npm run clean-test-code",
-    "tsc": "tsc",
-    "tscw": "tsc -w",
+    "tsc": "./node_modules/.bin/tsc",
+    "tscw": "./node_modules/.bin/tsc -w",
     "preversion": "npm run tsc",
     "postversion": "git push --follow-tags",
     "prepublishOnly": "npm run tsc && npm run clean-test-code",
